# RLTradingStrategist

./: BTC using Xgboost.ipynb  BinanceDataCollector.py  Copy_of_TheWholeCode.ipynb  DDQN_model.py  DataCollector.py  README.md  RLTradingAgent_Hyperparametertuning.ipynb  RL_BTC.ipynb  RL_ETH.ipynb  RLonBTC(A2C,PPO,RPPO).ipynb  btc_v1.py  btc_v2.py  copy_of_ddqn.py  cryptoagent.py  eth_v1.py  eth_v2.py  index.html  main.py  the_end.ipynb
RLTradingAgent/: DataCollector.py  cryptoagent.py
app/: convert_all_models.py  cryptoagent.py  index.html  model_loader.py  pyproject.toml  script.js  style.css  tempCodeRunnerFile.py  utils.py
app/models/: btc_model_low.pkl  btc_model_open.pkl  btc_stats_close.json  btc_stats_low.json  btc_stats_open.json  btc_stats_volume.json  eth_model_close.pkl  eth_model_high.pkl  eth_model_low.pkl  eth_model_open.pkl  eth_model_volume.pkl  eth_stats_close.json  eth_stats_high.json  eth_stats_low.json  eth_stats_open.json  eth_stats_volume.json  volume.py
app/models/btc/: btc_model_close.pkl  btc_model_high.pkl  btc_model_volume.pkl  btc_stats_high.json  close.py  high.py  low.py  open.py  volume.py
app/models/eth/: close.py  high.py  low.py  open.py  tempCodeRunnerFile.py  volume.py
