[project]
name = "tradingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "gymnasium>=1.2.0",
    "httpx>=0.28.1",
    "joblib>=1.5.1",
    "requests>=2.32.4",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
    "uvicorn>=0.35.0",
]
